<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">智慧充電站</string>
    <string name="facebook_app_id">190367554632686</string>
    <string name="content_description"></string>
    <string name="start_charge">開始充電</string>
    <string name="select_station">選擇充電站</string>
    <string name="location_station">站台位置</string>
    <string name="copy_right">版權宣告</string>
    <string name="must_charge">該充電囉</string>
    <string name="skip">略過</string>
    <string name="login">登入</string>
    <string name="title">標題</string>
    <string name="message">訊息</string>
    <string name="cancel">取消</string>
    <string name="ok">確定</string>
    <string name="attention">注意</string>
    <string name="error">錯誤</string>
    <string name="network_error">目前網路異常無法連線</string>
    <string name="qr_message">請掃描充電站螢幕上QR Code</string>
    <string name="about_power_station">關於智慧充電站</string>
    <string name="private_contract">隱私權條款</string>
    <string name="service_contract">服務條款</string>
    <string name="power_level">電量</string>
    <string name="temperature">溫度</string>
    <string name="health">健康</string>
    <string name="charge">充電</string>
    <string name="voltage">電壓</string>
    <string name="station">站台</string>
    <string name="qr_fail">QR Code 讀取失敗</string>
    <string name="power_state_fail">電箱資料讀取失敗</string>
    <string name="zero_temperature">0℃</string>
    <string name="battery_health_unknow">狀態未知</string>
    <string name="battery_health_good">狀態良好</string>
    <string name="battery_health_dead">狀態異常</string>
    <string name="battery_health_over_voltage">電壓異常</string>
    <string name="battery_health_over_head">電時過熱</string>

</resources>