<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_option"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="30dp"
    android:paddingRight="30dp" >

   

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp"
            android:paddingTop="10dp" >

            <TextView
                android:id="@+id/textViewDlgTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/title"
                android:textColor="@color/DEEP_Blue"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewDlgMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:text="@string/message"
                android:textColor="@color/Black"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:paddingBottom="10dp" >

            <Button
                android:id="@+id/dialog_button_ok"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="51dp"
                android:background="@drawable/button_style"
                android:text="@string/ok"
                android:textColor="@color/White" />

            <Button
                android:id="@+id/dialog_button_cancel"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="80dp"
                android:layout_height="51dip"
                android:layout_marginStart="20dp"
                android:background="@drawable/button_style"
                android:text="@string/cancel"
                android:textColor="#FFFFFF"
                android:visibility="gone" />

        </LinearLayout>
   

</LinearLayout>