<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageViewCompanyIcon"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/content_description"
            android:src="@drawable/icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_about"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textViewAboutPCS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_power_station"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/holo_blue_dark" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/bg_about_content" >

            <TextView
                android:id="@+id/textViewPrivateContract"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="80dp"
                android:background="@drawable/bg_right_item"
                android:gravity="center"
                android:text="@string/private_contract"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />

            <TextView
                android:id="@+id/textViewServiceContract"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="35dp"
                android:background="@drawable/bg_right_item"
                android:gravity="center"
                android:text="@string/service_contract"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>