<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_all"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:id="@+id/imageViewLoginPeople"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:contentDescription="@string/content_description"
        android:src="@drawable/login_people" />

    <TextView
        android:id="@+id/textViewLoginTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/textViewLoginFacebook"
        style="@style/com_facebook_loginview_default_style"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:drawableLeft="@drawable/com_facebook_button_icon"
        android:drawablePadding="6dp"
        android:drawableStart="@drawable/com_facebook_button_icon"
        android:text="@string/com_facebook_loginview_log_in_button_long"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewLoginSkip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/button_empty_style"
        android:paddingBottom="6dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="6dp"
        android:text="@string/skip"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/White" />

</LinearLayout>